--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "file-saver": "2.0.5",
     "firebase": "^11.3.1",
